fix: hidden navigation mobile

--- a/style.scss
+++ b/style.scss
@@ -1092,7 +1092,7 @@ html {
     left: calc(100vw/3);
     border: 2px solid #131313;
     text-align: center;
-    background: #ffffff;
+    background: #f48c8f;
     overflow-wrap: break-word;
 
     @media (max-width:768px) {
